--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
+    "dotenv-webpack": "^3.0.0",
     "html-loader": "^0.5.5",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
