upload router setting

--- a/package.json
+++ b/package.json
@@ -2,5 +2,25 @@
   "name": "trying-aws",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
+    "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-3": "^6.24.1",
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.4"
+  },
+  "scripts": {
+    "client": "cd client && yarn start",
+    "server": "nodemon --exec babel-node server.js",
+    "dev": "concurrently \"yarn run client\" \"yarn run server\""
+  }
 }
